--- a/开发者激励制度提案.md
+++ b/开发者激励制度提案.md
@@ -12,7 +12,7 @@
 
 ## 参与开发的方式
 
-1. 对于已有规划的开发任务，将在 dework 发布具体要求和奖励。
+1. 对于已有规划的开发任务，将在 [dework](https://app.dework.xyz/poemwiki) 发布具体要求和奖励。
 2. 如果开发者发现了 bug，或者可以改进的地方，或者希望添加的功能，欢迎在 discord 或者 GitHub issue 区提出，经确认后，将在 dework 发布对应的任务。
 3. 批量数据导入/修正。
 4. 提出完善开发/测试/部署/运维流程的方案，并促进实施。
@@ -22,11 +22,11 @@
 
 在诗金上链前，采取记录积分，提案发放的方式。诗金上链后，dework将与诗金连通，任务完成自动发放到贡献者钱包。
 
-另外，通过dework完成任务，会有任务完成的NFT发放到钱包。
+另外，通过 [dework](https://app.dework.xyz/poemwiki) 完成任务，会有任务完成的NFT发放到钱包。
 
 ## 预算（2022年9月-2023年3月）
 
-1. dework任务奖励（70万PG）
+1. [dework](https://app.dework.xyz/poemwiki) 任务奖励（70万PG）
 2. 介绍人奖励（10万PG）：介绍合适开发者对诗歌维基做出贡献的，按照前五次贡献奖励的20%给予介绍人奖励。
 
 总共80万PG
